<resources>
    <string name="app_name">GoConqr</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rajule Harish</string>
    <string name="nav_header_subtitle">rajuleharish01@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Material</string>
    <string name="menu_slideshow">Take Test</string>
    <string name="menu_doubt">Doubt Clarification</string>
    <string name="menu_signOut">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>