<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.puc_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_signOut"
        android:name="com.example.puc_app.ui.signout.SignoutFragment"
        android:label="@string/menu_signOut"
        tools:layout="@layout/fragment_signout" />
    <fragment
        android:id="@+id/nav_doubts"
        android:name="com.example.puc_app.ui.doubts.DoubtsFragment"
        android:label="@string/menu_doubt"
        tools:layout="@layout/fragment_doubts" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.puc_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.puc_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />



</navigation>